# szfinances

./: .env.example  .env.test  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/routers/: health.py
backend/app/api/routers/adm/: __init__.py  tbank.py
backend/app/api/routers/public/: __init__.py  tbank.py
backend/app/integrations/: tbank.py
backend/app/models/: __init__.py  tbank_connections.py
backend/app/repositories/: tbank_connection.py
backend/app/schemas/: tbank.py
backend/app/tasks/: celery_app.py  tbank.py
backend/migrations/versions/: 989fdc95ab2c_add_tbank_connections.py
