[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["backend/migrations"]

[tool.ruff.format]
quote-style = "single"

skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[[tool.uv.index]]
url = "https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple"
default = true

[tool.ruff.lint.per-file-ignores]
"backend/app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
mypy_path = "backend"
packages = ["app", "price_updater"]
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]


[project]
name = "sz-finances"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=5.0.3,<6.5",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "t-tech-investments>=0.3.5",
    "celery[redis]>=5.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
